// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots templates/Layout default 1`] = `
Array [
  <header
    className="makeStyles-root-2116 makeStyles-root-2119 makeStyles-header-2113"
  >
    <h1
      className="makeStyles-root-2120 makeStyles-root-2121 makeStyles-title-2117"
    >
      れいあうと
    </h1>
  </header>,
  <main
    className="makeStyles-root-2112 makeStyles-root-2115"
  />,
]
`;

exports[`Storyshots templates/Layout with back button 1`] = `
Array [
  <header
    className="makeStyles-root-2147 makeStyles-root-2150 makeStyles-header-2144"
  >
    <div
      className="makeStyles-rippleContainer-2151"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="makeStyles-root-2154 makeStyles-clickable-2155 makeStyles-root-2153 makeStyles-headerItem-2149"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          style={
            Object {
              "fontSize": "2.4rem",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
          />
        </svg>
      </span>
    </div>
    <h1
      className="makeStyles-root-2156 makeStyles-root-2157 makeStyles-title-2148"
    >
      れいあうと
    </h1>
  </header>,
  <main
    className="makeStyles-root-2143 makeStyles-root-2146"
  />,
  <nav
    className="makeStyles-root-2158 makeStyles-nav-2145"
  >
    <span
      className="makeStyles-itemWrapper-2159"
    >
      <div
        className="makeStyles-rippleContainer-2151"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/training/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2154 makeStyles-root-2160 makeStyles-root-2161"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
    <span
      className="makeStyles-itemWrapper-2159"
    >
      <div
        className="makeStyles-rippleContainer-2151"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/exam/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2154 makeStyles-root-2160 makeStyles-root-2162"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M22 10l-6-6H4c-1.1 0-2 .9-2 2v12.01c0 1.1.9 1.99 2 1.99l16-.01c1.1 0 2-.89 2-1.99v-8zm-7-4.5l5.5 5.5H15V5.5z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
    <span
      className="makeStyles-itemWrapper-2159"
    >
      <div
        className="makeStyles-rippleContainer-2151"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/karutas/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2154 makeStyles-root-2160 makeStyles-root-2163"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
    <span
      className="makeStyles-itemWrapper-2159"
    >
      <div
        className="makeStyles-rippleContainer-2151"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/about/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2154 makeStyles-root-2160 makeStyles-root-2164"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
  </nav>,
]
`;

exports[`Storyshots templates/Layout with navigation 1`] = `
Array [
  <header
    className="makeStyles-root-2126 makeStyles-root-2129 makeStyles-header-2123"
  >
    <h1
      className="makeStyles-root-2130 makeStyles-root-2131 makeStyles-title-2127"
    >
      れいあうと
    </h1>
  </header>,
  <main
    className="makeStyles-root-2122 makeStyles-root-2125"
  />,
  <nav
    className="makeStyles-root-2132 makeStyles-nav-2124"
  >
    <span
      className="makeStyles-itemWrapper-2133"
    >
      <div
        className="makeStyles-rippleContainer-2134"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/training/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2138 makeStyles-root-2136 makeStyles-root-2137"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
    <span
      className="makeStyles-itemWrapper-2133"
    >
      <div
        className="makeStyles-rippleContainer-2134"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/exam/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2138 makeStyles-root-2136 makeStyles-root-2140"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M22 10l-6-6H4c-1.1 0-2 .9-2 2v12.01c0 1.1.9 1.99 2 1.99l16-.01c1.1 0 2-.89 2-1.99v-8zm-7-4.5l5.5 5.5H15V5.5z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
    <span
      className="makeStyles-itemWrapper-2133"
    >
      <div
        className="makeStyles-rippleContainer-2134"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/karutas/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2138 makeStyles-root-2136 makeStyles-root-2141"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
    <span
      className="makeStyles-itemWrapper-2133"
    >
      <div
        className="makeStyles-rippleContainer-2134"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/about/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2138 makeStyles-root-2136 makeStyles-root-2142"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
  </nav>,
]
`;

exports[`Storyshots templates/Layout with search button 1`] = `
Array [
  <header
    className="makeStyles-root-2169 makeStyles-root-2172 makeStyles-header-2166"
  >
    <h1
      className="makeStyles-root-2173 makeStyles-root-2174 makeStyles-title-2170"
    >
      れいあうと
    </h1>
    <div
      className="makeStyles-rippleContainer-2175"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <span
        className="makeStyles-root-2178 makeStyles-clickable-2179 makeStyles-root-2177 makeStyles-headerItem-2171"
        onClick={[Function]}
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          style={
            Object {
              "fontSize": "2.4rem",
            }
          }
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </span>
    </div>
  </header>,
  <main
    className="makeStyles-root-2165 makeStyles-root-2168"
  />,
  <nav
    className="makeStyles-root-2180 makeStyles-nav-2167"
  >
    <span
      className="makeStyles-itemWrapper-2181"
    >
      <div
        className="makeStyles-rippleContainer-2175"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/training/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2178 makeStyles-root-2182 makeStyles-root-2183"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
    <span
      className="makeStyles-itemWrapper-2181"
    >
      <div
        className="makeStyles-rippleContainer-2175"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/exam/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2178 makeStyles-root-2182 makeStyles-root-2184"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M22 10l-6-6H4c-1.1 0-2 .9-2 2v12.01c0 1.1.9 1.99 2 1.99l16-.01c1.1 0 2-.89 2-1.99v-8zm-7-4.5l5.5 5.5H15V5.5z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
    <span
      className="makeStyles-itemWrapper-2181"
    >
      <div
        className="makeStyles-rippleContainer-2175"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/karutas/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2178 makeStyles-root-2182 makeStyles-root-2185"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 9H9V9h10v2zm-4 4H9v-2h6v2zm4-8H9V5h10v2z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
    <span
      className="makeStyles-itemWrapper-2181"
    >
      <div
        className="makeStyles-rippleContainer-2175"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <a
          href="/about/"
          onClick={[Function]}
          style={Object {}}
        >
          <span
            className="makeStyles-root-2178 makeStyles-root-2182 makeStyles-root-2186"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              style={
                Object {
                  "fontSize": "2.4rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
              />
            </svg>
          </span>
        </a>
      </div>
    </span>
  </nav>,
]
`;
